--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
 }
 
 body {
-  background: url(./assets/Moon.svg);
+  background: url(./assets/images/backgrounds/Moon.svg);
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-position: center;
