--- a/src/index.css
+++ b/src/index.css
@@ -43,7 +43,22 @@ body::-webkit-scrollbar-track {
 }
 
 body::-webkit-scrollbar-thumb {
-  background-color: #6c65db;
+  background-color: #eee;
+  border-radius: 10px;
+}
+
+.myScrollbar::-webkit-scrollbar {
+  width: 10px;
+}
+
+.myScrollbar::-webkit-scrollbar-track {
+  background-color: transparent;
+  border: #666 1px solid;
+  border-radius: 10px;
+}
+
+.myScrollbar::-webkit-scrollbar-thumb {
+  background-color: #eee;
   border-radius: 10px;
 }
 
