--- a/src/index.css
+++ b/src/index.css
@@ -67,3 +67,22 @@ body::-webkit-scrollbar-thumb {
   color: #000000;
   font-weight: 600;
 }
+
+/* Media query */
+@media (min-width: 480px) {
+  html {
+    font-size: 13px;
+  }
+}
+
+@media (min-width: 768px) {
+  html {
+    font-size: 14px;
+  }
+}
+
+@media (min-width: 1024px) {
+  html {
+    font-size: 16px;
+  }
+}
