--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
 }
 
 body {
+  scroll-behavior: smooth;
   background: url(./assets/images/backgrounds/Moon.svg);
   background-attachment: fixed;
   background-repeat: no-repeat;
