--- a/src/index.css
+++ b/src/index.css
@@ -347,3 +347,26 @@ body::-webkit-scrollbar-thumb {
     font-size: 16px;
   }
 }
+
+/* float-animation
+.float-animation {
+  animation: float ease-in-out 10s alternate-reverse infinite;
+}
+
+@keyframes float {
+  0% {
+    transform: translateY(1.5rem);
+  }
+  25% {
+    transform: translateY(-2rem);
+  }
+  50% {
+    transform: translateY(2rem);
+  }
+  75% {
+    transform: translateY(-2rem);
+  }
+  100% {
+    transform: translateY(0);
+  }
+} */
