--- a/src/index.css
+++ b/src/index.css
@@ -348,25 +348,25 @@ body::-webkit-scrollbar-thumb {
   }
 }
 
-/* float-animation
+/* float-animation */
 .float-animation {
   animation: float ease-in-out 10s alternate-reverse infinite;
 }
 
 @keyframes float {
   0% {
-    transform: translateY(1.5rem);
+    transform: translateY(0.5rem);
   }
   25% {
-    transform: translateY(-2rem);
+    transform: translateY(-1rem);
   }
   50% {
-    transform: translateY(2rem);
+    transform: translateY(1rem);
   }
   75% {
-    transform: translateY(-2rem);
+    transform: translateY(-1rem);
   }
   100% {
     transform: translateY(0);
   }
-} */
+}
